--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,10 @@
           <%= f.label :email %>
           <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
         </div>
-
+        <div class="form-group">
+          <%= f.label :username %>
+          <%= f.text_field :username, autofocus: true, autocomplete: 'username', class: 'form-control' %>
+        </div>
         <div class="form-group">
           <%= f.label :password %>
           <%= f.password_field :password, autocomplete: 'current-password', class: 'form-control' %>
